lack of active object after using selection tools blocks menus #68975

Closed
opened 2019-08-21 15:19:56 +02:00 by mark ferguson · 17 comments

System Information
Operating system: mac osx 10.14.4
Graphics card:NVIDIA GeForce GT 650M 512 M

Blender Version
Broken: 2.81 alpha 3d8f158697 nightly build 2019-08-21 and official
Worked:

Short description of error
possibly related to t68647. "objects selected using box select cannot be moved to collection if there is no active object"
the rest of this will be very similar to that issue (now resolved for that specific case).

If you have a number of objects and select one then delete it there is no longer an active object or previously active object.
If you then use any of the selection tools ( lasso, box or circle) to select other objects some menu options that would be expected to work do not.
As I was writing this I realised it was more than one option. Initially it was the "clear parent" command, but I have noticed it also applies to "rigid body> add active/ add passive" and may apply to more but I cannot find any others right now.

Exact steps for others to reproduce the error
I will concentrate on the "alt+p" "clear parent"command as example.
from startup add a number of objects .
you can parent some objects to others but that shouldn't matter.
select any object by clicking on it (so it becomes the active object).
delete this object.
use any of the selection tools to select the other objects or just the select all command. but do not use the direct click to select.
there are now objects selected but no active object.
press alt+p to clear parent.

nothing will happen. the clear parent menu options are also greyed out.

**System Information** Operating system: mac osx 10.14.4 Graphics card:NVIDIA GeForce GT 650M 512 M **Blender Version** Broken: 2.81 alpha 3d8f1586973b nightly build 2019-08-21 and official Worked: **Short description of error** possibly related to t68647. "objects selected using box select cannot be moved to collection if there is no active object" the rest of this will be very similar to that issue (now resolved for that specific case). If you have a number of objects and select one then delete it there is no longer an active object or previously active object. If you then use any of the selection tools ( lasso, box or circle) to select other objects some menu options that would be expected to work do not. As I was writing this I realised it was more than one option. Initially it was the "clear parent" command, but I have noticed it also applies to "rigid body> add active/ add passive" and may apply to more but I cannot find any others right now. **Exact steps for others to reproduce the error** I will concentrate on the "alt+p" "clear parent"command as example. from startup add a number of objects . you can parent some objects to others but that shouldn't matter. select any object by clicking on it (so it becomes the active object). delete this object. use any of the selection tools to select the other objects or just the select all command. but do not use the direct click to select. there are now objects selected but no active object. press alt+p to clear parent. nothing will happen. the clear parent menu options are also greyed out.
Author

Added subscriber: @massey

Added subscriber: @massey

#75340 was marked as duplicate of this issue

#75340 was marked as duplicate of this issue
Member

Added subscribers: @dfelinto, @ideasman42, @lichtwerk

Added subscribers: @dfelinto, @ideasman42, @lichtwerk
Member

Check discussion in D5485 also [efficient poll vs. invoke etc CC @ideasman42 ].

Not sure if all of these cases would be considered a bug atm. but if I read @dfelinto correctly, this should be added as TODO for the User Interface module?

Check discussion in [D5485](https://archive.blender.org/developer/D5485) also [efficient `poll` vs. `invoke` etc CC @ideasman42 ]. Not sure if all of these cases would be considered a bug atm. but if I read @dfelinto correctly, this should be added as TODO for the `User Interface` module?

There is no reason for clear parent to check the active object.

In these cases the active object check could be removed.

There is no reason for clear parent to check the active object. In these cases the active object check could be removed.
Philipp Oeser self-assigned this 2019-08-28 19:32:08 +02:00
Member

Oki, will do

Oki, will do
Philipp Oeser was unassigned by Dalai Felinto 2019-12-23 13:54:14 +01:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Clear parent should not look at the active object as it works on all selected objects. This needs to be done on a per case situation. I will set it to known issue for now.

Clear parent should not look at the active object as it works on all selected objects. This needs to be done on a per case situation. I will set it to known issue for now.

This issue was referenced by 03000549fb

This issue was referenced by 03000549fbed522cce231a3a41346af2c8c291c2
Member

Clear Parent is now free from this issue 03000549fb, there might/will be others, so keep this report open...

Clear Parent is now free from this issue 03000549fb, there might/will be others, so keep this report open...
Member

Added subscriber: @APEC

Added subscriber: @APEC

Added subscriber: @AndrewPalmer

Added subscriber: @AndrewPalmer

A lack of active object can occur also if the user hides the active object. In this case, the hidden object is still the active object, but operations cannot occur on it because it is hidden. Although it is easily solved by selecting another object, to many users I don't think it will be obvious what the problem is if other objects are visibly selected. With a hidden active object, there is no error message displayed at all, whereas an error is displayed when there is no active object because it was deleted.

If the multi-select operations such as box, lasso or select all were modified to check for an active object and make one of the newly select objects the active object if there isn't one already, it would go some way to fixing the issue in the short term, but perhaps looking into how the active object and selection works a little more would lead to a better solution?

Another slight oddity I have noticed with the active object is that it cannot be manually deactivated by selection - only deletion or by selecting another (single) object. shift+clicking the active object does not deactivate it, and performing select all (deselect action) will also leave it active but not selected. Trying to perform an operation such as join on selected objects when the active object is not selected leads to the error "Active object is not a selected mesh". I do realise that you can use a deselected active object as a sort of pivot object for transformations by deselecting it, but isn't that what the 3d cursor is supposed to be for? Active element transforms are useful in mesh edit mode, but the active element cannot be deselected and still active in edit mode as far as I can tell, so they are functionally a little different, since the active element will be affected by the transform in mesh edit mode, but not object mode.

A lack of active object can occur also if the user hides the active object. In this case, the hidden object is still the active object, but operations cannot occur on it because it is hidden. Although it is easily solved by selecting another object, to many users I don't think it will be obvious what the problem is if other objects are visibly selected. With a hidden active object, there is no error message displayed at all, whereas an error is displayed when there is no active object because it was deleted. If the multi-select operations such as box, lasso or select all were modified to check for an active object and make one of the newly select objects the active object if there isn't one already, it would go some way to fixing the issue in the short term, but perhaps looking into how the active object and selection works a little more would lead to a better solution? Another slight oddity I have noticed with the active object is that it cannot be manually deactivated by selection - only deletion or by selecting another (single) object. shift+clicking the active object does not deactivate it, and performing select all (deselect action) will also leave it active but not selected. Trying to perform an operation such as join on selected objects when the active object is not selected leads to the error "Active object is not a selected mesh". I do realise that you can use a deselected active object as a sort of pivot object for transformations by deselecting it, but isn't that what the 3d cursor is supposed to be for? Active element transforms are useful in mesh edit mode, but the active element cannot be deselected and still active in edit mode as far as I can tell, so they are functionally a little different, since the active element will be affected by the transform in mesh edit mode, but not object mode.

Added subscriber: @ckohl_art

Added subscriber: @ckohl_art

Lack of active object also blocks Edit Mode, not just menus, despite having a selection. e.g. you have box selected one or more meshes but didn't have an active object, and now you can't enter edit mode without setting one active first.

Or similar to that, the wrong object type. e.g. select a light to make some changes, then box select a new selection of one or more meshes. The light remains the active object despite not being selected which blocks edit mode for the meshes since lights are the wrong object type and don't have their own edit mode type.

Lack of active object also blocks Edit Mode, not just menus, despite having a selection. e.g. you have box selected one or more meshes but didn't have an active object, and now you can't enter edit mode without setting one active first. Or similar to that, the wrong object type. e.g. select a light to make some changes, then box select a new selection of one or more meshes. The light remains the active object despite not being selected which blocks edit mode for the meshes since lights are the wrong object type and don't have their own edit mode type.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-05-18 07:43:14 +02:00

@lichtwerk closing thi as reports should always have reproducible steps and you've fixed the issue reported.

Related issues can be new reports.

@lichtwerk closing thi as reports should always have reproducible steps and you've fixed the issue reported. Related issues can be new reports.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68975
No description provided.