remove poll for OBJECT_OT_parent_clear

This works on selected_editable_objects, so no active object mandatory.

After deletion of the active object and using slection tools such as
e.g. box select, the lack of an active object would prevent this
operator from being called without good reason.

Also cannot think of any other existing poll that would really make
sense (Editor type, ...).

ref T68975

Maniphest Tasks: T68975

Differential Revision: https://developer.blender.org/D6773